styles/main.css
/*
Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
Code distributed by Google as part of the polymer project is also
subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
*/

body {
    background: #fafafa;
    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    color: #333;
}

html, body {
  height: 100%;
  margin: 0;
}

paper-header-panel {
  height: 100%;
}

main-element {
  height: 100%;
}

.page-card-temp {
  margin: 30px;
  padding: 20px;
}


paper-fab {
  position: fixed;
  z-index: 4;
  bottom: 35px;
  right: 35px;
}


paper-toolbar {
  height: 140px;
}

#mainContainer {
  /*height: 100%;*/
}


.circular {
  display: inline-block;
	width: 60px;
	height: 60px;
	border-radius: 150px;
	-webkit-border-radius: 150px;
	-moz-border-radius: 150px;

	background: url(http://spi1uk.itvnet.lv/upload/articles/25/251818/images/_origin_Emma-Watson-Cartier-19.jpg) no-repeat;
  background-position: center;
  background-size: cover;
	}

